# RuView

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  fix-regression-guard.yml  security-scan.yml  sentient-bridge.yml  verify-pipeline.yml
archive/v1/tests/unit/: test_esp32_binary_parser.py
benchmarks/wiflow-std/: .gitignore  RESULTS.md  _bench_common.py  eval_ort_accuracy.py  eval_repro.py  export_to_safetensors.py  generate_corruption_masks.py  onnx_bench.py  quantize_bench.py  ruvector.db  static_ptq_bench.py  tiny_edge_bench.py
benchmarks/wiflow-std/remote/: eval_retrained.py
benchmarks/wiflow-std/remote/measb/: train_measb.py
benchmarks/wiflow-std/remote/sweep/: run_sweep.py
benchmarks/wiflow-std/results/: big_windows_mask.npy  nan_windows_mask.npy
docs/: user-guide.md
docs/adr/: ADR-027-cross-environment-domain-generalization.md  ADR-250-adaptive-gamma-entrainment.md  README.md
docs/integration/: calibration-appliance-integration.md
firmware/esp32-csi-node/main/: csi_collector.c  csi_collector.h  display_task.c  display_task.h  main.c
nvsim/: sw.js.map
pointcloud/: README.md  index.html
scripts/: pretrain-mae-gcloud.sh  witness-adr-115.sh
sentient_bridge/: Dockerfile  README.md  __init__.py  __main__.py  bridge.py  config.py  publisher.py  requirements.txt  schemas.py  selftest.py  simulator.py  test_bridge.py
v2/crates/ruview-gamma/: README.md
v2/crates/ruview-gamma-clinic/src/: server.rs  store.rs
v2/crates/ruview-gamma/src/: acceptance.rs  bandit.rs  hil.rs  lib.rs  objective.rs  optimizer.rs  participant.rs  program.rs  proof.rs  response.rs  ruflo.rs  ruflo_report.rs  ruflo_ruvector.rs  ruflo_tests.rs  ruvector.rs  simulator.rs  stimulus.rs  stimulus_tests.rs
v2/crates/wifi-densepose-cli/src/: calibrate_api.rs  room.rs
v2/crates/wifi-densepose-engine/: Cargo.toml
v2/crates/wifi-densepose-engine/benches/: engine_cycle.rs
v2/crates/wifi-densepose-engine/src/: lib.rs  mesh_guard.rs
v2/crates/wifi-densepose-hardware/src/ieee80211bf/: events.rs  messages.rs  mod.rs  session.rs  table.rs  tests.rs  tests_fsm.rs  tests_sbp.rs  transport.rs  types.rs
v2/crates/wifi-densepose-sensing-server/src/: engine_bridge.rs  main.rs
v2/crates/wifi-densepose-sensing-server/src/mqtt/: discovery.rs  mod.rs  publisher.rs  state.rs
v2/crates/wifi-densepose-sensing-server/tests/: mqtt_integration.rs
v2/crates/wifi-densepose-train/: Cargo.toml  README.md
v2/crates/wifi-densepose-train/src/: csi_mae.rs  error.rs  lib.rs  mae.rs  model.rs  temporal_aether.rs  trainer.rs
v2/crates/wifi-densepose-train/src/wiflow_std/: config.rs  layers.rs  model.rs
v2/crates/wifi-densepose-train/tests/: test_mae.rs
v2/crates/wifi-densepose-worldgraph/: Cargo.toml
v2/crates/wifi-densepose-worldmodel/: Cargo.toml
