[package]
name = "wifi-densepose-worldgraph"
description = "ADR-139 — WorldGraph environmental digital twin (typed petgraph) for RuView"
readme = "README.md"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
petgraph.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
wifi-densepose-geo = { version = "0.1.0", path = "../wifi-densepose-geo" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
